I modify on index page the members information

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
 				</tr>
 				<tr>
 					<td class="nume">
-						<p>	Alexandru-Ioan Barac</p>
-						<p> Vlad-Andrei Fara</p>
-						<p> Teodor-Florentin Tatu-Zevedei</p>
-						<p> Ahmed Selim Uzum</p>
-		
+						<p>	Alexandru-Ioan Barac - 13 years - Romania</p>
+						<p> Ahmed Selim Uzum - 13 years - Turkey</p>
+						<p> Vlad-Andrei Fara - 16 years - Romania</p>
+						<p> Teodor-Florentin Tatu-Zevedei - 14 years - Romania</p>
 					</td>
 				</tr>
 			</table>
