Some modifications in text.

--- a/html/about.html
+++ b/html/about.html
@@ -39,8 +39,8 @@
 				</tr>
 				<tr>
 					<td class="nume">
-						<p>In an enchanted forest on its outskirts lies a lake where many fish live gold fish. But in one day came a fisherman who wanted to fish them on all. You are John, forester and it must stop fishing. Fisherman has a rod that can beat you, but also has a great team.</p>
-						<p>This game was made in Stencyl. 
+						<p>In an enchanted forest there lies a lake where many fish and animals live. But there is one day per year where fishermen are fishing them all. THE GLOBAL DAY OF ILLEGAL FISHING. You are John the ranger and you must stop the fishing. Fishermen have rods that can beat you, but you are better then them.</p>
+						<p>This game was made in Stencyl and in CoderDojo Camp Istanbul 2016. </p>
 					</td>
 				</tr>
 			</table>
